--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,28 +1,37 @@
-name: CI Pipeline for index1-html branch
+# This is a basic workflow to help you get started with Actions
 
+name: CI
+
+# Controls when the workflow will run
 on:
-    push:
-        branches:
-            - index1-html
+  # Triggers the workflow on push or pull request events but only for the "main" branch
+  push:
+    branches: [ "main" ]
+   
+  pull_request:
+    branches: [ "main" ]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-    build:
-        runs-on: ubuntu-latest
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: checkout code
-              uses: actions/checkout@v2
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
 
-            - name: Display message
-              run: echo "Hello World"
+      # Runs a single command using the runner's shell
+      - name: Run a one-line script
+        run: echo Hello, world!
 
-            - name: Notify result
-              if: always()
-              run: |
-               if [[ ${{ job.status }} == 'success' ]]; then
-                echo "CI pipeline succeeded for push to index1-html branch!"
-               else
-                echo "CI pipeline failed for push to index1-html branch!"
-               fi
-
-
+      # Runs a set of commands using the runner's shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
